fix: Center button text on smaller devices
Original-Commit:

https://gitlab.com/manid2/manid2.gitlab.io/-/commit/10b06981e786ffc7d39dac4abc356ca37eeb918c

--- a/assets/styles/_buttons.scss
+++ b/assets/styles/_buttons.scss
@@ -87,20 +87,16 @@ button,
     row-gap: $spacer-small;
   }
 
-  /* Buttons centered in the container */
-  &.center {
-    justify-content: center;
-  }
-
   /* Buttons filling the container */
   &.fill {
     button,
     .button,
     a.button {
-      flex-grow: 1;
+      flex: 1 0 0;
 
       @media ($phone) {
         width: 100%;
+        justify-content: center;
       }
     }
   }
